Analisi del layout con i commenti

--- a/index.html
+++ b/index.html
@@ -12,10 +12,32 @@
 
   <header>
     <!-- Aggiungo il logo dentro un div -->
-    <!-- A destra dell'header aggiungo una nav-bar con dentro una ul e dentro i li verranno stampati dinamicamente -->
+    <div class="cnt-header">
+      <div class="logo">
+        <h2>Bryson</h2>
+      </div>
+      <!-- A destra dell'header aggiungo una nav-bar con dentro una ul e dentro i li verranno stampati dinamicamente -->
+      <nav class="main-nav">
+        <ul class="nav__list">
+          <li class="list-item"><a href="">link</a></li>
+          <li class="list-item"><a href="">link</a></li>
+          <li class="list-item"><a href="">link</a></li>
+          <li class="list-item"><a href="">link</a></li>
+          <li class="list-item"><a href="">link</a></li>
+          <li class="list-item"><a href="">link</a></li>
+          <li class="list-item"><a href="">linkar</a></li>
+        </ul>
+      </nav>
+    </div>
     <!-- Ogni list-item è stampato con un v-for di un array dei data che sarà composto da stringhe e un svg -->
   </header>
-
+  <main>
+    <!-- Il main è diviso in diverse sezioni -->
+    <!-- ogni sezione ha un container grande e un container piccolo -->
+    <!-- la prima sezione è quella con un titolone e un sottotitolo -->
+    <!-- il container grande contiene una bg image e il triangolino àncora -->
+    <!-- il container piccolo contiene il 'corpo' della pagina  -->
+  </main>
 
 
 
