Stampa dinamica dei link dell'header

--- a/index.html
+++ b/index.html
@@ -11,50 +11,43 @@
   <title>Bryson</title>
 </head>
 <body>
-
-  <header>
-    <!-- Aggiungo il logo dentro un div -->
-    <div class="cnt-header">
-      <div class="logo">
-        <img src="img/logo-img-01.png" alt="logo">
-      </div>
-      <!-- A destra dell'header aggiungo una nav-bar con dentro una ul e dentro i li verranno stampati dinamicamente -->
-      <nav class="main-nav">
-        <ul class="nav__list">
-          <li class="list-item"><a href="">link</a></li>
-          <li class="list-item"><a href="">link</a></li>
-          <li class="list-item"><a href="">link</a></li>
-          <li class="list-item"><a href="">link</a></li>
-          <li class="list-item"><a href="">link</a></li>
-          <li class="list-item"><a href="">link</a></li>
-          <li class="list-item"><a href="">linkar</a></li>
-        </ul>
-      </nav>
-    </div>
-    <!-- Ogni list-item è stampato con un v-for di un array dei data che sarà composto da stringhe e un svg -->
-  </header>
-  <main>
-    <!-- Il main è diviso in diverse sezioni -->
-    <section class="banner">
-      <div class="cnt-big">
-        <div class="cnt-small">
-          <h1>We are Bryson, New York-based art & deign studio</h1>
-          <p class="main--text">Here at Bryson it only takes a smifgen of imagination and we've prepared ourselves for future challenges. Take a peek and see if you recognize a tademark ingredients of our work.</p>
+  <div id="app">
+    <header>
+      <!-- Aggiungo il logo dentro un div -->
+      <div class="cnt-header">
+        <div class="logo">
+          <img src="img/logo-img-01.png" alt="logo">
         </div>
+        <!-- A destra dell'header aggiungo una nav-bar con dentro una ul e dentro i li verranno stampati dinamicamente -->
+        <nav class="main-nav">
+          <ul class="nav__list">
+            <li v-for="(element, index) in navItems" v-if = "element != 'svg/svg-1.svg'" class="list-item"><a href="#">{{element}}</a></li>
+          </ul>
+        </nav>
       </div>
-    </section>
-    <!-- ogni sezione ha un container grande e un container piccolo -->
-    <!-- la prima sezione è quella con un titolone e un sottotitolo -->
-    <!-- il container grande contiene una bg image e il triangolino àncora -->
-    <!-- il container piccolo contiene il 'corpo' della pagina  -->
-  </main>
-  <footer>
-    <!-- il footer ha la stessa struttura del body ma c'è solo il contenitore piccolo -->
-    <!-- il contenitore piccolo ha il testo centrato -->
+      <!-- Ogni list-item è stampato con un v-for di un array dei data che sarà composto da stringhe e un svg -->
+    </header>
+    <main>
+      <!-- Il main è diviso in diverse sezioni -->
+      <section class="banner">
+        <div class="cnt-big">
+          <div class="cnt-small">
+            <h1>We are Bryson, New York-based art & deign studio</h1>
+            <p class="main--text">Here at Bryson it only takes a smifgen of imagination and we've prepared ourselves for future challenges. Take a peek and see if you recognize a tademark ingredients of our work.</p>
+          </div>
+        </div>
+      </section>
+      <!-- ogni sezione ha un container grande e un container piccolo -->
+      <!-- la prima sezione è quella con un titolone e un sottotitolo -->
+      <!-- il container grande contiene una bg image e il triangolino àncora -->
+      <!-- il container piccolo contiene il 'corpo' della pagina  -->
+    </main>
+    <footer>
+      <!-- il footer ha la stessa struttura del body ma c'è solo il contenitore piccolo -->
+      <!-- il contenitore piccolo ha il testo centrato -->
 
-  </footer>
-
-
+    </footer>
+  </div>
  <script src="js/script.js"></script> 
 </body>
 </html>
