--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li v-for="(element, index) in navItems" v-if="element != 'svg/svg-1.svg' " class="list-item"><a href="#">{{element}}</a></li>
             <li v-else class="list-item">
             <a href="">
-            <img :src="element" alt="">
+              <img :src="element" alt="">
             </a>
             </li>
           </ul>
@@ -36,25 +36,27 @@
     <main>
       <!-- Il main è diviso in diverse sezioni -->
       <section class="banner">
-      <!-- ogni sezione ha un container grande e un container piccolo -->
-      <!-- la prima sezione è quella con un titolone,un sottotitolo e le immagini -->
+        <!-- ogni sezione ha un container grande e un container piccolo -->
+        <!-- la prima sezione è quella con un titolone,un sottotitolo e le immagini -->
         <div class="cnt-big bg-img__titles">
           <div class="cnt-title">
             <h1>We are Bryson, New York-based art & deign studio</h1>
             <p class="main--text">Here at Bryson it only takes a smifgen of imagination and we've prepared ourselves for future challenges. Take a peek and see if you recognize a tademark ingredients of our work.</p>
           </div>
-          <div class="cnt-small images__container">
-            <img src="img/port-img-07.jpg" alt="">
-            <img src="img/port-img-08.jpg" alt="">
-            <img src="img/port-img-09.jpg" alt="">
-            <img src="img/port-img-10.jpg" alt="">
-            <img src="img/port-img-11.jpg" alt="">
-            <img src="img/port-img-12.jpg" alt="">
+          <div class="cnt-big images__bg">
+            <div class="cnt-small images__container">
+              <img src="img/port-img-07.jpg" alt="">
+              <img src="img/port-img-08.jpg" alt="">
+              <img src="img/port-img-09.jpg" alt="">
+              <img src="img/port-img-10.jpg" alt="">
+              <img src="img/port-img-11.jpg" alt="">
+              <img src="img/port-img-12.jpg" alt="">
+              </div>
             </div>
-            
           </div>
         </div>
       </section>
+            
       <!-- il container grande contiene una bg image e il triangolino àncora -->
       <!-- il container piccolo contiene il 'corpo' della pagina  -->
     </main>
