Modifica della prima sezione

--- a/index.html
+++ b/index.html
@@ -37,22 +37,34 @@
       <!-- Il main è diviso in diverse sezioni -->
       <section class="banner">
         <!-- ogni sezione ha un container grande e un container piccolo -->
-        <!-- la prima sezione è quella con un titolone,un sottotitolo e le immagini -->
+        <!-- la prima sezione è quella con un titolone,un sottotitolo e le prime immagini -->
         <div class="cnt-big bg-img__titles">
           <div class="cnt-title">
             <h1>We are Bryson, New York-based art & deign studio</h1>
             <p class="main--text">Here at Bryson it only takes a smifgen of imagination and we've prepared ourselves for future challenges. Take a peek and see if you recognize a tademark ingredients of our work.</p>
           </div>
-          <div class="cnt-big images__bg">
-            <div class="cnt-small images__container">
+          <div class="cnt-small images__container">
+            <div class="image">
               <img src="img/port-img-07.jpg" alt="">
-              <img src="img/port-img-08.jpg" alt="">
-              <img src="img/port-img-09.jpg" alt="">
-              <img src="img/port-img-10.jpg" alt="">
-              <img src="img/port-img-11.jpg" alt="">
-              <img src="img/port-img-12.jpg" alt="">
-              </div>
+            <div class="overlay"></div>
             </div>
+            <div class="image">
+              <img src="img/port-img-08.jpg" alt="">
+              <div class="overlay"></div>
+          </div>
+        </div>
+      </section>
+      
+      <section class="pictures-kids" >
+        <div class="bg-big ">
+          <div class="cnt-small">
+            <div class="image">
+              <img src="img/port-img-09.jpg" alt="">
+              <div class="overlay"></div>
+            </div>
+            <div class="image">
+              <img src="img/port-img-10.jpg" alt="">
+              <div class="overlay"></div>
           </div>
         </div>
       </section>
