--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="crossorigin="anonymous" />
   <link rel="stylesheet" href="dist/app.css">
   <title>Bryson</title>
 </head>
@@ -43,6 +44,7 @@
             <h1>We are Bryson, New York-based art & deign studio</h1>
             <p class="main--text">Here at Bryson it only takes a smifgen of imagination and we've prepared ourselves for future challenges. Take a peek and see if you recognize a tademark ingredients of our work.</p>
           </div>
+        <!-- prima riga di immagini -->
           <div class="cnt-small images__container">
             <div class="image">
               <img src="img/port-img-07.jpg" alt="">
@@ -50,11 +52,13 @@
             </div>
             <div class="image">
               <img src="img/port-img-08.jpg" alt="">
-              <div class="overlay"></div>
+              <div class="overlay">
+                <div class="arrow-placeholder"></div>
+              </div>
           </div>
         </div>
       </section>
-      
+      <!-- seconda riga di immagini -->
       <section class="pictures-kids" >
         <div class="bg-big ">
           <div class="cnt-small">
@@ -65,12 +69,28 @@
             <div class="image">
               <img src="img/port-img-10.jpg" alt="">
               <div class="overlay"></div>
+            </div>
           </div>
         </div>
+      <a href="#" class="arrow-up">
+      </a>
       </section>
-            
-      <!-- il container grande contiene una bg image e il triangolino àncora -->
-      <!-- il container piccolo contiene il 'corpo' della pagina  -->
+      <!-- terza riga di immagini -->
+      <section class="friendship-tablet">
+        <div class="bg-big ">
+          <div class="cnt-small">
+            <div class="image">
+              <img src="img/port-img-11.jpg" alt="">
+              <div class="overlay"></div>
+            </div>
+            <div class="image">
+              <img src="img/port-img-12.jpg" alt="">
+              <div class="overlay"></div>
+            </div>
+          </div>
+        </div>
+        <a href="#" class="arrow-up"></a>
+      </section>
     </main>
     <footer>
       <!-- il footer ha la stessa struttura del body ma c'è solo il contenitore piccolo -->
