--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
             <div class="image">
               <img src="img/port-img-08.jpg" alt="">
               <div class="overlay">
-                <div class="arrow-placeholder"></div>
+                <div class="diagonal">
+                  <span class="overlay__title">Free design</span>
+                  <span class="overlay__text">Book illustration</span>
+                </div>
               </div>
           </div>
         </div>
