testo sulla piega

--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
           <div class="cnt-small images__container">
             <div class="image">
               <img src="img/port-img-07.jpg" alt="">
-            <div class="overlay"></div>
+            <div class="overlay">
+              <div class="diagonal">
+                <span class="overlay__title">Free design</span>
+                <span class="overlay__text">Book illustration</span>
+              </div>
+            </div>
             </div>
             <div class="image">
               <img src="img/port-img-08.jpg" alt="">
@@ -67,11 +72,21 @@
           <div class="cnt-small">
             <div class="image">
               <img src="img/port-img-09.jpg" alt="">
-              <div class="overlay"></div>
+              <div class="overlay">
+                <div class="diagonal">
+                  <span class="overlay__title">Free design</span>
+                  <span class="overlay__text">Book illustration</span>
+                </div>
+              </div>
             </div>
             <div class="image">
               <img src="img/port-img-10.jpg" alt="">
-              <div class="overlay"></div>
+              <div class="overlay">
+                <div class="diagonal">
+                  <span class="overlay__title">Free design</span>
+                  <span class="overlay__text">Book illustration</span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -84,11 +99,21 @@
           <div class="cnt-small">
             <div class="image">
               <img src="img/port-img-11.jpg" alt="">
-              <div class="overlay"></div>
+              <div class="overlay">
+                <div class="diagonal">
+                  <span class="overlay__title">Free design</span>
+                  <span class="overlay__text">Book illustration</span>
+                </div>
+              </div>
             </div>
             <div class="image">
               <img src="img/port-img-12.jpg" alt="">
-              <div class="overlay"></div>
+              <div class="overlay">
+                <div class="diagonal">
+                  <span class="overlay__title">Free design</span>
+                  <span class="overlay__text">Book illustration</span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
