Aggiunto mixin bottoni

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com"> <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Karma:wght@400;500;700&family=Poppins:wght@400;700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="crossorigin="anonymous" />
   <link rel="stylesheet" href="dist/app.css">
   <title>Bryson</title>
@@ -90,8 +95,6 @@
             </div>
           </div>
         </div>
-      <a href="#" class="arrow-up">
-      </a>
       </section>
       <!-- terza riga di immagini -->
       <section class="friendship-tablet">
@@ -118,6 +121,19 @@
           </div>
         </div>
         <a href="#" class="arrow-up"></a>
+      </section>
+      <!-- sezione what we do -->
+      <section id="we-do">
+        <div class="cnt-small">
+          <div class="box-text">
+            <h2>What we do?</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat non voluptatum error vitae, soluta provident excepturi ut? Quibusdam rem dolorum maxime autem vel excepturi animi voluptatem eum! Laudantium, accusantium omnis!</p>
+            <button class="btn-info">Read More</button>
+          </div>
+          <div class="cnt-sevices">
+
+          </div>
+        </div>
       </section>
     </main>
     <footer>
