Sezione what we do

--- a/index.html
+++ b/index.html
@@ -127,11 +127,26 @@
         <div class="cnt-small">
           <div class="box-text">
             <h2>What we do?</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat non voluptatum error vitae, soluta provident excepturi ut? Quibusdam rem dolorum maxime autem vel excepturi animi voluptatem eum! Laudantium, accusantium omnis!</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat non voluptatum error vitae, soluta provident excepturi ut? Quibusdam animi voluptatem eum!</p>
             <button class="btn-info">Read More</button>
           </div>
           <div class="cnt-sevices">
-
+            <div class="box__service">
+              <img src="img/h2-icon-01.png" alt="">
+              <h3>Beautifiul illustration</h3>
+            </div>
+            <div class="box__service">
+              <img src="img/h2-icon-02.png" alt="">
+              <h3>Brand strategies</h3>
+            </div>
+            <div class="box__service">
+              <img src="img/h2-icon-03.png" alt="">
+              <h3>Qualified Support</h3>
+            </div>
+            <div class="box__service">
+              <img src="img/h2-icon-04.png" alt="">
+              <h3>Books & magazines</h3>
+            </div>
           </div>
         </div>
       </section>
