Sezione video con effetto

--- a/index.html
+++ b/index.html
@@ -150,6 +150,11 @@
           </div>
         </div>
       </section>
+      <section id="video">
+        <div class="cnt-big">
+          <img src="img/main-home-video-button-img-01.png" alt="">
+        </div>
+      </section>
     </main>
     <footer>
       <!-- il footer ha la stessa struttura del body ma c'è solo il contenitore piccolo -->
