Corretti box della sezione we-do

--- a/index.html
+++ b/index.html
@@ -150,9 +150,23 @@
           </div>
         </div>
       </section>
+      <!-- sezione del video -->
       <section id="video">
         <div class="cnt-big">
           <img src="img/main-home-video-button-img-01.png" alt="">
+        </div>
+      </section>
+      <!-- sezione delle cards --> 
+      <section id="cards"> 
+        <div class="cnt-small">
+          <div class="card">
+            <h3>Basic</h3>
+            <div class="prize--item">99$</div>
+            <ul>
+              <li class="main--text">5 Design concepts</li>
+              
+            </ul>
+          </div>
         </div>
       </section>
     </main>
