--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <h1>We are Bryson, New York-based art & deign studio</h1>
             <p class="main--text">Here at Bryson it only takes a smifgen of imagination and we've prepared ourselves for future challenges. Take a peek and see if you recognize a tademark ingredients of our work.</p>
           </div>
+        
         <!-- prima riga di immagini -->
           <div class="cnt-small images__container">
             <div class="image">
@@ -71,6 +72,7 @@
           </div>
         </div>
       </section>
+    <div id="images__bg">
       <!-- seconda riga di immagini -->
       <section class="pictures-kids" >
         <div class="bg-big ">
@@ -120,8 +122,9 @@
             </div>
           </div>
         </div>
-        <a href="#" class="arrow-up"></a>
+        <!-- <a href="#" class="arrow-up"></a> -->
       </section>
+    </div>
       <!-- sezione what we do -->
       <section id="we-do">
         <div class="cnt-small">
