--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
               </div>
           </div>
         </div>
+      </div>
       </section>
     <div id="images__bg">
       <!-- seconda riga di immagini -->
@@ -227,7 +228,7 @@
         <img src="img/logo-img-01.png" alt="logo">
         <p>Sometimes doing something seemingly demanding turns out to be fun.Here's the proof - Bryson, your brand new portfolio</p>
         <ul class="social__list">
-          <li v-for="social in socials"><a href="#">{{social}}</a></li>
+          <li   v-for="social in socials" class="social-item "><a href="#" :class="social.class"><i :class="social.tag"></i></a></li>
         </ul>
       </div>
     </footer>
