Aggiunte iconcine sticky

--- a/index.html
+++ b/index.html
@@ -222,6 +222,10 @@
         </div>
       </section>
     </main>
+    <div class="icons-sticky">
+          <button class="btn-icon" id="circle"><img src="svg/svg-2.svg" alt=""></button>
+          <button class="btn-icon" id="shop"><img src="svg/svg-4.svg" alt=""></button>
+    </div>
     <footer>
       <div class="footer-box">
         <div class="logo footer__logo">
@@ -235,14 +239,8 @@
       <a href="#" class="arrow-up"></a>
     </footer>
   </div>
+       
  <script src="js/script.js"></script> 
-  <div class="icons-sticky">
-    <div class="icons__cnt">
-      <a href="#" id="circle"><img src="svg/svg-2.svg" alt=""></a>
-      <a href="#" id="shop"><img src="svg/svg-4.svg" alt=""></a>
-    </div>
-  </div>
-
 </body>
 </html>
             
