--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
             <h1>We are Bryson, New York-based art & deign studio</h1>
             <p class="main--text">Here at Bryson it only takes a smifgen of imagination and we've prepared ourselves for future challenges. Take a peek and see if you recognize a tademark ingredients of our work.</p>
           </div>
-        
         <!-- prima riga di immagini -->
           <div class="cnt-small images__container">
             <div class="image">
@@ -79,6 +78,14 @@
     <div id="images__bg">
       <!-- seconda riga di immagini -->
       <section class="pictures-kids" >
+        <div class="social-aside">
+          <ul>
+            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
+          </ul>
+        </div>
         <div class="bg-big ">
           <div class="cnt-small">
             <div class="image">
